--- a/CourseWeb/src/index.css
+++ b/CourseWeb/src/index.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap');
-
+@import './css/colors.css';
 :root {
   /* Font Family */
   --font-family: "Source Serif 4", serif;
