--- a/CourseWeb/src/index.css
+++ b/CourseWeb/src/index.css
@@ -23,12 +23,13 @@ h1 {
   background-color: #000;
   color: #fff;
   display: flex;
-  padding: 8px 16px;
+  padding: 12px 16px;
   justify-content: center;
   align-items: center;
   background-color: #fff;
-  color: #2d2f31;
-  border-radius: 10px;
+  color: #000000;
+  font-weight: bold;
+  border-radius: 5px;
   border: 1px solid #2d2f31;
   text-decoration: none;
 }
