Cart context , payment process

--- a/CourseWeb/src/css/inputs.css
+++ b/CourseWeb/src/css/inputs.css
@@ -10,6 +10,8 @@ input[type="email"],
 input[type="password"],
 input[type="date"],
 input[type="search"],
+input[type="tel"],
+input[type="number"],
 textarea {
     width: 100%;
     padding: 0.75rem 1rem;
